# qt-event-dispatcher-libuv

./: .clang-format  .gitignore  CMakeLists.txt
cmake/: CPM.cmake
features/: eventDispatcher.h
spec/: eventdispatcherlibuvSpec.cpp
src/: eventdispatcherlibuv.cpp  eventdispatcherlibuv.h  eventdispatcherlibuv_p.h
src/app/: CMakeLists.txt  addmemberdialog.cpp  addmemberdialog.h  addmemberdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  messagehandler.cpp  messagehandler.h  teammembermodel.h  teammemberview.h  xmlhandler.cpp
src/dispatcher/: CMakeLists.txt  eventdispatcherlibuv.cpp
src/dispatcher/eventdispatcherlibuv/: async_channel.cpp  socket_notifier.cpp
src/eventdispatcherlibuv/: libuv_api.cpp  time_tracker.cpp  timer_notifier.cpp
src/networking/: CMakeLists.txt  proxy.h  tcpserver.cpp  tcpserver.h
test/: CMakeLists.txt  images.qrc  main.cpp  main.cpp.org  mainwindow.cpp  mainwindow.h  mainwindow.ui  teammembermodel.cpp  teammemberview.cpp  teammemberview.ui  teamview.cpp  teamview.h  teamview.ui  xmlhandler.h
